feat: add important metadate

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,6 +11,16 @@
       rel="stylesheet"
     />
 
+    <meta name="author" content="Maciej Nojszewski" />
+    <meta
+      name="description"
+      content="Portfolio of Maciej Nojszewski - showcasing projects, skills, and professional background."
+    />
+    <meta
+      name="keywords"
+      content="Maciej Nojszewski, portfolio, web developer, frontend developer, programmer, projects, resume, about me, designer"
+    />
+
     <title>Portfolio - Maciej Nojszewski</title>
   </head>
   <body>
